--- a/client/pom.xml
+++ b/client/pom.xml
@@ -1,32 +1,27 @@
+<!-- Plain Java module (no Spring Boot). Add deps here if/when needed. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <!-- Inherit versions and plugin management from the parent -->
     <parent>
-        <groupId>com.example</groupId>
-        <artifactId>secureprograming</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>edu.secureprog</groupId>
+        <artifactId>SecurePrograming</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath> <!-- points to the parent in the repo root -->
     </parent>
 
     <artifactId>client</artifactId>
+    <name>SecurePrograming :: client</name>
     <packaging>jar</packaging>
 
     <dependencies>
-        <!-- Spring Boot Web (假设 client 用 REST 或 WebSocket) -->
+        <!-- Keep it minimal; add libraries (e.g., HTTP client) when the client evolves -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <!-- WebSocket 客户端 -->
-        <dependency>
-            <groupId>org.java-websocket</groupId>
-            <artifactId>Java-WebSocket</artifactId>
-            <version>1.5.6</version>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
-
 </project>
