--- a/pom.xml
+++ b/pom.xml
@@ -1,49 +1,115 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+  Parent (aggregator + dependency management) POM for SecurePrograming.
+
+  - Packaging "pom" so this file only manages/aggregates modules.
+  - Java 17 toolchain for all modules.
+  - Imports Spring Boot BOM 3.3.x for consistent dependency versions.
+  - Pins versions for artifacts not in the Boot BOM (e.g., MyBatis Boot).
+  - Child modules: server, client.
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- 父项目信息 -->
-    <groupId>com.example</groupId>
-    <artifactId>secureprograming</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <!-- Parent coordinates (make module <parent> blocks match these exactly) -->
+    <groupId>edu.secureprog</groupId>
+    <artifactId>SecurePrograming</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>SecurePrograming</name>
+    <name>SecurePrograming :: Parent</name>
+    <description>Parent POM that manages versions and aggregates modules</description>
 
-    <!-- 定义子模块 -->
-    <modules>
-        <module>client</module>
-        <module>server</module>
-    </modules>
-
-    <!-- Spring Boot 父依赖 -->
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.5</version>
-        <relativePath/> <!-- 自动获取 -->
-    </parent>
-
+    <!-- Project-wide properties -->
     <properties>
+        <!-- Java level used by compiler plugins (Boot respects this too) -->
         <java.version>17</java.version>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+
+        <!-- Platform/BOM version -->
+        <spring-boot.version>3.3.3</spring-boot.version>
+
+        <!-- Libraries not managed by the Boot BOM (pin them here) -->
+        <mybatis-spring-boot.version>3.0.4</mybatis-spring-boot.version>
+        <mysql.version>8.4.0</mysql.version>
+
+        <!-- Encodings -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
+    <!-- Import Spring Boot's dependency BOM (manages most starter/library versions) -->
     <dependencyManagement>
         <dependencies>
-            <!-- 统一版本管理 -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>3.2.5</version>
+                <version>${spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter</artifactId>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+            </dependency>
+
+
+            <!-- Lock versions that are not covered by the Boot BOM -->
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis-spring-boot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.mysql</groupId>
+                <artifactId>mysql-connector-j</artifactId>
+                <version>${mysql.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
 
+    <!-- Common plugin versions/configs shared by child modules -->
+    <build>
+        <pluginManagement>
+            <plugins>
+                <!-- Ensure Java 17 compilation across modules -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.11.0</version>
+                    <configuration>
+                        <release>${java.version}</release>
+                    </configuration>
+                </plugin>
+
+                <!-- Modern Surefire (JUnit 5 compatible) -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.2.5</version>
+                </plugin>
+
+                <!-- Attach sources if you deploy artifacts (optional) -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>3.3.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
+    <!-- Reactor modules (folder names must match) -->
+    <modules>
+        <module>server</module>
+        <module>client</module>
+    </modules>
 </project>
