--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>edu.secureprog</groupId>
-    <artifactId>SecurePrograming</artifactId>
+    <artifactId>SecureProgramming</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>SecurePrograming :: Parent</name>
+    <name>SecureProgramming :: Parent</name>
     <description>Parent POM that manages versions and aggregates modules</description>
 
     <properties>
